--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -2,4 +2,11 @@
 
 ion-tab-bar {
     padding-top: 0.5rem;
+
+    // See https://github.com/ionic-team/ionic-framework/issues/17676
+    // This fixes translucent
+    position: absolute;
+    bottom: 0;  
+    left: 0;  
+    width: 100%;  
 }
